[package]
name = "amm_turbine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_turbine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.2"
anchor-spl = { version = "1.0.2", features = ["token"] }
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }

[dev-dependencies]
litesvm = "0.12.0"
litesvm-token = "0.12.0"
solana-message = "3.1.0"
solana-transaction = "3.1.0"
solana-signer = "3.0.0"
solana-keypair = "3.1.2"
solana-pubkey = "3.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
